objects/AIA_Document_Department_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <description>field to store department values</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <description>field to store sub-department values</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting which stores the mapping of Document Type vs. Department vs. Sub-Department values. This is used by FileNet Document Interface.</description>
    <label>AIA Document - Department Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>Department__c</columns>
        <columns>Sub_Department__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>